--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 .button {
   margin-top: 4rem;
